Fix spacing on debug consoles

--- a/example/public/styles.css
+++ b/example/public/styles.css
@@ -43,7 +43,7 @@ button:hover {
 }
 
 details {
-  margin-top: 0.75rem;
+  margin: 0.75rem 0;
 }
 
 .container {
